
2021-11-11 0.1.1:
 - 增加 Barrier Single 标准欧式单障碍期权定价功能及其示例。
 - 标准欧式单障碍增加敲出时资金立即支付和延迟支付的区分。
 - 标准欧式单障碍增加参与率参数并更新示例。
 - 增加 Barrier Double 标准欧式双障碍期权结构。
 - 增加 Autocall Booster 结构及其示例。

2021-08-25 0.1.0:
 - 构建项目基本结构。