@@ -28,7 +28,7 @@ g_up_out   = 3 # 向上敲出
 g_down_out = 4 # 向下敲出
 
 class Config(object):
-    def __init__(self, s, h, k, x, v, r, q, t, p, is_call, is_knock, is_kop_delay, barrier_type):
+    def __init__(self, s, h, k, x, v, r, q, t, p, is_call, is_kop_delay, barrier_type):
         self.s = s # 标的价格
         self.h = h # 障碍价格
         self.k = k # 行权价格
@@ -39,7 +39,6 @@ class Config(object):
         self.t = t # 年化到期期限
         self.p = p # 参与率，未敲出情况下客户对收益的占比要求
         self.is_call = is_call # 看涨看跌
-        self.is_knock = is_knock # 是否已经敲入敲出
         self.is_kop_delay = is_kop_delay # 敲出后是立即还是延期支付资金
         self.barrier_type = barrier_type # 障碍类型
 
@@ -49,13 +48,13 @@ class Config(object):
 def Test_Barrier_Single():
     barrier = derivx.Barrier("Single")
     
-    # Config(s, h, k, x, v, r, q, t, p, is_call, is_knock, is_kop_delay, barrier_type)
+    # Config(s, h, k, x, v, r, q, t, p, is_call, is_kop_delay, barrier_type)
     
     # for s in [80.0, 82.0, 84.0, 86.0, 88.0, 90.0, 92.0, 94.0, 96.0, 98.0, 100.0, 102.0, 104.0]:
-    #     #config = Config(s, 80.0, 100.0, 0.0, 0.3, 0.03, 0.02, 1.0, 1.0, True, False, False, g_down_in)
-    #     #config = Config(s, 80.0, 100.0, 0.0, 0.3, 0.03, 0.02, 1.0, 1.0, True, False, False, g_down_out)
-    #     #config = Config(s, 80.0, 100.0, 0.0, 0.3, 0.03, 0.02, 1.0, 1.0, False, False, False, g_down_in)
-    #     config = Config(s, 80.0, 100.0, 0.0, 0.3, 0.03, 0.02, 1.0, 1.0, False, False, False, g_down_out)
+    #     #config = Config(s, 80.0, 100.0, 0.0, 0.3, 0.03, 0.02, 1.0, 1.0, True, False, g_down_in)
+    #     #config = Config(s, 80.0, 100.0, 0.0, 0.3, 0.03, 0.02, 1.0, 1.0, True, False, g_down_out)
+    #     #config = Config(s, 80.0, 100.0, 0.0, 0.3, 0.03, 0.02, 1.0, 1.0, False, False, g_down_in)
+    #     config = Config(s, 80.0, 100.0, 0.0, 0.3, 0.03, 0.02, 1.0, 1.0, False, False, g_down_out)
     #     if barrier.InitArgs(config.ToArgs()) < 0:
     #         print(barrier.GetError())
     #         return
@@ -69,7 +68,7 @@ def Test_Barrier_Single():
     args_cdo = [[90.0, 95.0, 0.25], [100.0, 95.0, 0.25], [110.0, 95.0, 0.25], [90.0, 100.0, 0.25], [100.0, 100.0, 0.25], [110.0, 100.0, 0.25],
                 [90.0, 95.0, 0.30], [100.0, 95.0, 0.30], [110.0, 95.0, 0.30], [90.0, 100.0, 0.30], [100.0, 100.0, 0.30], [110.0, 100.0, 0.30]] # k, h, v
     for args in args_cdo:
-        config = Config(100.0, args[1], args[0], 3.0, args[2], 0.08, 0.04, 0.5, 1.0, True, False, False, g_down_out)
+        config = Config(100.0, args[1], args[0], 3.0, args[2], 0.08, 0.04, 0.5, 1.0, True, False, g_down_out)
         if barrier.InitArgs(config.ToArgs()) < 0:
             print(barrier.GetError())
             return
@@ -82,7 +81,7 @@ def Test_Barrier_Single():
     
     args_cuo = [[90.0, 105.0, 0.25], [100.0, 105.0, 0.25], [110.0, 105.0, 0.25], [90.0, 105.0, 0.30], [100.0, 105.0, 0.30], [110.0, 105.0, 0.30]] # k, h, v
     for args in args_cuo:
-        config = Config(100.0, args[1], args[0], 3.0, args[2], 0.08, 0.04, 0.5, 1.0, True, False, False, g_up_out)
+        config = Config(100.0, args[1], args[0], 3.0, args[2], 0.08, 0.04, 0.5, 1.0, True, False, g_up_out)
         if barrier.InitArgs(config.ToArgs()) < 0:
             print(barrier.GetError())
             return
@@ -96,7 +95,7 @@ def Test_Barrier_Single():
     args_cdi = [[90.0, 95.0, 0.25], [100.0, 95.0, 0.25], [110.0, 95.0, 0.25], [90.0, 100.0, 0.25], [100.0, 100.0, 0.25], [110.0, 100.0, 0.25],
                 [90.0, 95.0, 0.30], [100.0, 95.0, 0.30], [110.0, 95.0, 0.30], [90.0, 100.0, 0.30], [100.0, 100.0, 0.30], [110.0, 100.0, 0.30]] # k, h, v
     for args in args_cdi:
-        config = Config(100.0, args[1], args[0], 3.0, args[2], 0.08, 0.04, 0.5, 1.0, True, False, False, g_down_in)
+        config = Config(100.0, args[1], args[0], 3.0, args[2], 0.08, 0.04, 0.5, 1.0, True, False, g_down_in)
         if barrier.InitArgs(config.ToArgs()) < 0:
             print(barrier.GetError())
             return
@@ -109,7 +108,7 @@ def Test_Barrier_Single():
     
     args_cui = [[90.0, 105.0, 0.25], [100.0, 105.0, 0.25], [110.0, 105.0, 0.25], [90.0, 105.0, 0.30], [100.0, 105.0, 0.30], [110.0, 105.0, 0.30]] # k, h, v
     for args in args_cui:
-        config = Config(100.0, args[1], args[0], 3.0, args[2], 0.08, 0.04, 0.5, 1.0, True, False, False, g_up_in)
+        config = Config(100.0, args[1], args[0], 3.0, args[2], 0.08, 0.04, 0.5, 1.0, True, False, g_up_in)
         if barrier.InitArgs(config.ToArgs()) < 0:
             print(barrier.GetError())
             return
@@ -123,7 +122,7 @@ def Test_Barrier_Single():
     args_pdo = [[90.0, 95.0, 0.25], [100.0, 95.0, 0.25], [110.0, 95.0, 0.25], [90.0, 100.0, 0.25], [100.0, 100.0, 0.25], [110.0, 100.0, 0.25],
                 [90.0, 95.0, 0.30], [100.0, 95.0, 0.30], [110.0, 95.0, 0.30], [90.0, 100.0, 0.30], [100.0, 100.0, 0.30], [110.0, 100.0, 0.30]] # k, h, v
     for args in args_pdo:
-        config = Config(100.0, args[1], args[0], 3.0, args[2], 0.08, 0.04, 0.5, 1.0, False, False, False, g_down_out)
+        config = Config(100.0, args[1], args[0], 3.0, args[2], 0.08, 0.04, 0.5, 1.0, False, False, g_down_out)
         if barrier.InitArgs(config.ToArgs()) < 0:
             print(barrier.GetError())
             return
@@ -136,7 +135,7 @@ def Test_Barrier_Single():
     
     args_puo = [[90.0, 105.0, 0.25], [100.0, 105.0, 0.25], [110.0, 105.0, 0.25], [90.0, 105.0, 0.30], [100.0, 105.0, 0.30], [110.0, 105.0, 0.30]] # k, h, v
     for args in args_puo:
-        config = Config(100.0, args[1], args[0], 3.0, args[2], 0.08, 0.04, 0.5, 1.0, False, False, False, g_up_out)
+        config = Config(100.0, args[1], args[0], 3.0, args[2], 0.08, 0.04, 0.5, 1.0, False, False, g_up_out)
         if barrier.InitArgs(config.ToArgs()) < 0:
             print(barrier.GetError())
             return
@@ -150,7 +149,7 @@ def Test_Barrier_Single():
     args_pdi = [[90.0, 95.0, 0.25], [100.0, 95.0, 0.25], [110.0, 95.0, 0.25], [90.0, 100.0, 0.25], [100.0, 100.0, 0.25], [110.0, 100.0, 0.25],
                 [90.0, 95.0, 0.30], [100.0, 95.0, 0.30], [110.0, 95.0, 0.30], [90.0, 100.0, 0.30], [100.0, 100.0, 0.30], [110.0, 100.0, 0.30]] # k, h, v
     for args in args_pdi:
-        config = Config(100.0, args[1], args[0], 3.0, args[2], 0.08, 0.04, 0.5, 1.0, False, False, False, g_down_in)
+        config = Config(100.0, args[1], args[0], 3.0, args[2], 0.08, 0.04, 0.5, 1.0, False, False, g_down_in)
         if barrier.InitArgs(config.ToArgs()) < 0:
             print(barrier.GetError())
             return
@@ -163,7 +162,7 @@ def Test_Barrier_Single():
     
     args_pui = [[90.0, 105.0, 0.25], [100.0, 105.0, 0.25], [110.0, 105.0, 0.25], [90.0, 105.0, 0.30], [100.0, 105.0, 0.30], [110.0, 105.0, 0.30]] # k, h, v
     for args in args_pui:
-        config = Config(100.0, args[1], args[0], 3.0, args[2], 0.08, 0.04, 0.5, 1.0, False, False, False, g_up_in)
+        config = Config(100.0, args[1], args[0], 3.0, args[2], 0.08, 0.04, 0.5, 1.0, False, False, g_up_in)
         if barrier.InitArgs(config.ToArgs()) < 0:
             print(barrier.GetError())
             return
@@ -174,29 +173,29 @@ def Test_Barrier_Single():
             print("pui 计算价格发生异常！%s" % e)
             return
     
-    # Config(s, h, k, x, v, r, q, t, p, is_call, is_knock, , is_kop_delay, barrier_type)
+    # Config(s, h, k, x, v, r, q, t, p, is_call, is_kop_delay, barrier_type)
     
     config_list = []
     
-    config_list.append(Config(100.0, 0.0, 90.0, 3.0, 0.0, 0.0, 0.0, 0.0, 1.0, True, False, False, g_down_out)) # s - k = 10.0
-    config_list.append(Config(100.0, 0.0, 90.0, 3.0, 0.0, 0.0, 0.0, 0.0, 1.0, True, True, False, g_down_out)) # x = 3.0
-    config_list.append(Config(100.0, 0.0, 115.0, 3.0, 0.0, 0.0, 0.0, 0.0, 1.0, False, False, False, g_down_out)) # k - s = 15.0
-    config_list.append(Config(100.0, 0.0, 115.0, 3.0, 0.0, 0.0, 0.0, 0.0, 1.0, False, True, False, g_down_out)) # x = 3.0
+    config_list.append(Config(100.0, 80.0, 90.0, 3.0, 0.0, 0.0, 0.0, 0.0, 1.0, True, False, g_down_out)) # 未敲出 s - k = 10.0
+    config_list.append(Config(100.0, 120.0, 90.0, 3.0, 0.0, 0.0, 0.0, 0.0, 1.0, True, False, g_down_out)) # 已敲出 x = 3.0
+    config_list.append(Config(100.0, 80.0, 115.0, 3.0, 0.0, 0.0, 0.0, 0.0, 1.0, False, False, g_down_out)) # 未敲出 k - s = 15.0
+    config_list.append(Config(100.0, 120.0, 115.0, 3.0, 0.0, 0.0, 0.0, 0.0, 1.0, False, False, g_down_out)) # 已敲出 x = 3.0
     
-    config_list.append(Config(100.0, 0.0, 90.0, 3.0, 0.0, 0.0, 0.0, 0.0, 1.0, True, False, False, g_up_out)) # s - k = 10.0
-    config_list.append(Config(100.0, 0.0, 90.0, 3.0, 0.0, 0.0, 0.0, 0.0, 1.0, True, True, False, g_up_out)) # x = 3.0
-    config_list.append(Config(100.0, 0.0, 115.0, 3.0, 0.0, 0.0, 0.0, 0.0, 1.0, False, False, False, g_up_out)) # k - s = 15.0
-    config_list.append(Config(100.0, 0.0, 115.0, 3.0, 0.0, 0.0, 0.0, 0.0, 1.0, False, True, False, g_up_out)) # x = 3.0
+    config_list.append(Config(100.0, 120.0, 90.0, 3.0, 0.0, 0.0, 0.0, 0.0, 1.0, True, False, g_up_out)) # 未敲出 s - k = 10.0
+    config_list.append(Config(100.0, 80.0, 90.0, 3.0, 0.0, 0.0, 0.0, 0.0, 1.0, True, False, g_up_out)) # 已敲出 x = 3.0
+    config_list.append(Config(100.0, 120.0, 115.0, 3.0, 0.0, 0.0, 0.0, 0.0, 1.0, False, False, g_up_out)) # 未敲出 k - s = 15.0
+    config_list.append(Config(100.0, 80.0, 115.0, 3.0, 0.0, 0.0, 0.0, 0.0, 1.0, False, False, g_up_out)) # 已敲出 x = 3.0
     
-    config_list.append(Config(100.0, 0.0, 90.0, 3.0, 0.0, 0.0, 0.0, 0.0, 1.0, True, False, False, g_down_in)) # x = 3.0
-    config_list.append(Config(100.0, 0.0, 90.0, 3.0, 0.0, 0.0, 0.0, 0.0, 1.0, True, True, False, g_down_in)) # s - k = 10.0
-    config_list.append(Config(100.0, 0.0, 115.0, 3.0, 0.0, 0.0, 0.0, 0.0, 1.0, False, False, False, g_down_in)) # x = 3.0
-    config_list.append(Config(100.0, 0.0, 115.0, 3.0, 0.0, 0.0, 0.0, 0.0, 1.0, False, True, False, g_down_in)) # k - s = 15.0
+    config_list.append(Config(100.0, 80.0, 90.0, 3.0, 0.0, 0.0, 0.0, 0.0, 1.0, True, False, g_down_in)) # 未敲入 x = 3.0
+    config_list.append(Config(100.0, 120.0, 90.0, 3.0, 0.0, 0.0, 0.0, 0.0, 1.0, True, False, g_down_in)) # 已敲入 s - k = 10.0
+    config_list.append(Config(100.0, 80.0, 115.0, 3.0, 0.0, 0.0, 0.0, 0.0, 1.0, False, False, g_down_in)) # 未敲入 x = 3.0
+    config_list.append(Config(100.0, 120.0, 115.0, 3.0, 0.0, 0.0, 0.0, 0.0, 1.0, False, False, g_down_in)) # 已敲入 k - s = 15.0
     
-    config_list.append(Config(100.0, 0.0, 90.0, 3.0, 0.0, 0.0, 0.0, 0.0, 1.0, True, False, False, g_up_in)) # x = 3.0
-    config_list.append(Config(100.0, 0.0, 90.0, 3.0, 0.0, 0.0, 0.0, 0.0, 1.0, True, True, False, g_up_in)) # s - k = 10.0
-    config_list.append(Config(100.0, 0.0, 115.0, 3.0, 0.0, 0.0, 0.0, 0.0, 1.0, False, False, False, g_up_in)) # x = 3.0
-    config_list.append(Config(100.0, 0.0, 115.0, 3.0, 0.0, 0.0, 0.0, 0.0, 1.0, False, True, False, g_up_in)) # k - s = 15.0
+    config_list.append(Config(100.0, 120.0, 90.0, 3.0, 0.0, 0.0, 0.0, 0.0, 1.0, True, False, g_up_in)) # 未敲入 x = 3.0
+    config_list.append(Config(100.0, 80.0, 90.0, 3.0, 0.0, 0.0, 0.0, 0.0, 1.0, True, False, g_up_in)) # 已敲入 s - k = 10.0
+    config_list.append(Config(100.0, 120.0, 115.0, 3.0, 0.0, 0.0, 0.0, 0.0, 1.0, False, False, g_up_in)) # 未敲入 x = 3.0
+    config_list.append(Config(100.0, 80.0, 115.0, 3.0, 0.0, 0.0, 0.0, 0.0, 1.0, False, False, g_up_in)) # 已敲入 k - s = 15.0
     
     for config in config_list:
         if barrier.InitArgs(config.ToArgs()) < 0:
